Robert/191 remove powermock whitebox (#79)
* [191]: Refactor IsaacNumericValidator & Test to eliminate powermock whitebox

* [191]: Refactor UserAuthenticationManager & Test to eliminate powermock whitebox

* [191]: Minor cleanup

* [191]: Update assertions in UserManagerTest

* [191]: Refactor ContentIndexer & Test to eliminate powermock whitebox

* [191]: Remove unused helper method in ContentIndexerTest

* [191]: Unify GroupManager test files

* [191]: Refactor GroupManager & Test to eliminate powermock whitebox

* [191]: Remove powermock dependency

* [191]: Modify checkstyle workflow configuration to attempt a fix on the severity issues

* [191]: Modify checkstyle workflow configuration to attempt a fix on the severity issues (attempt 2)

* [191]: Modify checkstyle workflow configuration to attempt a fix on the severity issues - update action version

* [191]: Modify checkstyle workflow configuration to attempt a fix on the severity issues - continue-on-error?

* [191]: Modify checkstyle workflow configuration to attempt a fix on the severity issues - fail-on-error?

* [191]: More PR comment cleanup

* [191]: Per PR comment, remove unnecessary empty string in test